manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: hello-world-ingress
  namespace: hello-world-dev
spec:
  defaultBackend:
    service:
      name: hello-world-app
      port:
        number: 8080
  ingressClassName: nginx
  rules:
    - host: dev-hello-world.ngn.no
      http:
        paths:
          - backend:
              service:
                name: hello-world-app
                port:
                  number: 8080
            path: /(/|$)(.*)
            pathType: Prefix
  tls:
    - hosts:
        - dev-hello-world.ngn.no
      secretName: wildcard-ngn-no
